--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vertical Farm</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -48,7 +48,7 @@
                 <h2 class="f fs">Plant <b>Grown Vertically</b></h2>
                 <h2 class="f ft">in <b>Urban Areas</b></h2>
                 <p class="para">Our vertical farming startup brings sustainable, locally grown produce to urban areas. With our innovative technology, we're revolutionizing the way we grow and consume fresh food.</p>
-                <a href="#" class="start">Start Now</a>
+                <a href="#" class="start">Start Now ↗</a>
 
                 <a href="#" class="how">HOW IT WORKS</a>
 
