--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <a href="#" class="start">Start Now ↗</a>
 
                 <a href="#" class="how">HOW IT WORKS</a>
+                <img class="plant" src="assets/images/plant.jpg" alt="">
 
                 
 
@@ -105,6 +106,7 @@
         </div>
 
         <div class="cont"> <h3 class="con1">Contact Team</h3></div>
+        <img src="assets/images/people.jpg" alt="" class="people">
 
 
     </div>
